--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@hugeicons/core-free-icons": "^2.0.0",
+    "@hugeicons/react": "^1.1.1",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "pg": "^8.16.3",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "shadcn": "^3.6.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
@@ -25,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "prisma": "^7.1.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0"
   }
 }
