--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@gsap/react": "^2.1.2",
     "@hugeicons/core-free-icons": "^2.0.0",
     "@hugeicons/react": "^1.1.1",
     "@prisma/adapter-pg": "^7.1.0",
@@ -18,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
-    "lucide-react": "^0.561.0",
+    "gsap": "^3.14.2",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
