--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
     "next": "16.0.10",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
