feat: implement initial Prisma schema, core UI components, and foundational app layouts for admin and customer sections.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "allowJs": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "jsx": "preserve",
+    "noEmit": true
   }
 }
