--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "eslint-plugin-react": "^7.37.5",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
