--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
@@ -30,6 +31,7 @@
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
     "react": "19.2.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "shadcn": "^3.6.1",
     "sonner": "^2.0.7",
