--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "19.2.1",
     "shadcn": "^3.6.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xendit-node": "^7.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
